<resources>
    <string name="app_name">Mayo</string>
    <string name="password">Password</string>
    <string name="show">Show</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_id">   Enter email address</string>
    <string name="submit">Submit</string>
    <string name="enter_your_e_mail_address_we_ll_send_you_an_email_to_reset_your_password">Enter your e-mail address we\'ll send you an email to reset your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="next">Next</string>
    <string name="hospital">Hospital</string>
    <string name="department">Department</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="search">Search</string>
    <string name="doctors">Doctors</string>
    <string name="patients">Patients</string>
    <string name="bolba">Bolba</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profile_photo">profile photo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_a_message">Type a message</string>
    <string name="this_is_a_message">This is a message</string>
    <string name="this_is_a_receive_message">This is a receive message</string>
    <string name="title_activity_patients_list">PatientsListActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="please_select_what_you_are_click_on_the_right_picture_if_you_are_a_patient_or_on_the_left_picture_if_you_are_a_doctor">Please select what you are, click on the right picture if you are a patient or on the left picture if you are a doctor</string>
    <string name="very_important_please_verify_your_email_address_before_logging_if_you_don_t_confirm_your_email_address_you_will_not_be_able_to_see_the_patient_list">Very important, please verify your email address before logging, if you don\'t confirm your email address, you will not be able to see the patient list.</string>
    <string name="forgot_your_password_that_s_okay_it_happens_enter_your_email_address_and_we_ll_send_you_an_email_where_you_can_reset_your_password">Forgot your password?That\'s okay, it happens! Enter your email address and we\'ll send you an email where you can reset your password.</string>
    <string name="chats">Chats</string>
    <string name="YOUR_API_KEY">AIzaSyAwkojzVPAguab9yKoQP13ItF-r7obP77s</string>

</resources>