<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:onClick="hideKeyboard"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    android:background="@drawable/background_log_in"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LogIn">

    <androidx.cardview.widget.CardView
        android:id="@+id/app_pin_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/chat_anim" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edit_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_email_layout"
        app:passwordToggleEnabled="true"
        android:hint="@string/password"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/backgroundAppColor1"
        app:boxStrokeWidthFocused="3dp"
        app:boxStrokeWidth="3dp"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:hintTextColor="@color/backgroundAppColor1"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:saveEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edit_email_layout"
        android:layout_marginTop="180dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/backgroundAppColor1"
        app:boxStrokeWidthFocused="3dp"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        android:hint="@string/email"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        app:helperTextTextColor="@color/red"
        app:helperTextEnabled="true"
        app:hintTextColor="@color/backgroundAppColor1"
        app:boxStrokeWidth="3dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_email"
        android:inputType="textEmailAddress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLogin"
        android:layout_below="@id/edit_password_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="-100dp"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:padding="5dp"
        android:text="@string/forgot_password"
        tools:ignore="UnusedAttribute"
        android:focusable="true" />

    <Button
        android:enabled="false"
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_email_layout"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/selector"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"/>
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:focusable="true" />

</RelativeLayout>
