<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_log_in"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    tools:context=".InsertPinActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/app_pin_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo"
            android:src="@drawable/mypin" />
    </androidx.cardview.widget.CardView>

   <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/editPin_layout"
        android:singleLine="true"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_below="@+id/app_pin_image"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        app:boxStrokeWidth="3dp"
        app:boxStrokeColor="@color/backgroundAppColor1"
        app:boxStrokeWidthFocused="3dp"
        app:hintTextColor="@color/backgroundAppColor1"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp"
        tools:ignore="RtlSymmetry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPin"
            android:maxLines="1"
            android:inputType="textPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnNext"
        android:enabled="false"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editPin_layout"
        android:text="@string/next"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/selector"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>