<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="hideKeyboard"
    android:background="@drawable/background_log_in"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".patients.SignUpPatients">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edit_name_layout"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:boxStrokeWidth="3dp"
        app:boxStrokeColor="@color/backgroundAppColor1"
        app:boxStrokeWidthFocused="3dp"
        app:hintTextColor="@color/backgroundAppColor1"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name"
            android:maxLines="1"
            android:inputType="textPersonName|textCapWords"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edit_email_layout"
        android:layout_below="@+id/edit_name_layout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/backgroundAppColor1"
        app:boxStrokeWidthFocused="3dp"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        android:hint="@string/email"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        app:helperTextTextColor="@color/red"
        app:helperTextEnabled="true"
        app:hintTextColor="@color/backgroundAppColor1"
        app:boxStrokeWidth="3dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edit_phone_layout"
        android:layout_below="@+id/edit_email_layout"
        android:layout_marginStart="20dp"
        app:boxStrokeColor="@color/backgroundAppColor1"
        app:boxStrokeWidthFocused="3dp"
        android:layout_marginEnd="20dp"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        app:helperTextTextColor="@color/red"
        app:helperTextEnabled="true"
        app:counterEnabled="true"
        app:hintTextColor="@color/backgroundAppColor1"
        app:boxStrokeWidth="3dp"
        app:counterMaxLength="10"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_phone"
            android:inputType="phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edit_country_layout"
        android:layout_below="@+id/edit_phone_layout"
        android:layout_marginStart="20dp"
        app:boxStrokeColor="@color/backgroundAppColor1"
        app:boxStrokeWidthFocused="3dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        app:startIconDrawable="@drawable/ic_baseline_south_america_24"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        app:helperTextTextColor="@color/red"
        app:hintTextColor="@color/backgroundAppColor1"
        app:boxStrokeWidth="3dp"
        app:helperTextEnabled="true"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_country"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edit_city_layout"
        android:layout_below="@+id/edit_country_layout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/backgroundAppColor1"
        app:boxStrokeWidthFocused="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        app:startIconDrawable="@drawable/ic_baseline_location_city_24"
        app:helperTextTextColor="@color/red"
        app:helperTextEnabled="true"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        app:hintTextColor="@color/backgroundAppColor1"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxStrokeWidth="3dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_city"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/edit_password_layout"
        android:layout_below="@+id/edit_city_layout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/backgroundAppColor1"
        app:boxStrokeWidthFocused="3dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:boxStrokeWidth="3dp"
        app:hintTextColor="@color/backgroundAppColor1"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopStart="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:enabled="false"
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password_layout"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/selector"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
</RelativeLayout>