<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inverted_corners">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_patient_photo"
        android:src="@drawable/ic_baseline_person_24"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_color="@color/black"
        app:civ_border_width="3dp"/>

    <Button
        android:id="@+id/button_upload_profile_image"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_patient_photo"
        android:text="Save"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/design_default_color_primary_dark"
        android:id="@+id/progressBar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:background="@drawable/dialog_rounded_corners"
        android:layout_width="match_parent"
        android:backgroundTint="#86C2F1"
        android:layout_marginTop="300dp"
        android:layout_height="match_parent"
        >

        <Button
            android:id="@+id/log_out"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:text="@string/log_out"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_delete_account"
            android:layout_width="150dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:text="@string/delete_account"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/log_out" />

            <TextView
                android:id="@+id/email_current_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/button_delete_account" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_baseline_mark_email_read_24"
                android:text=" Email: "
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_delete_account" />

            <TextView
                android:id="@+id/verified_current_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_baseline_verified_user_24"
                android:text=" Email verified: "
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>